--- a/src/index.css
+++ b/src/index.css
@@ -78,7 +78,7 @@ ul {
 }
 
 .pigTile {
-  display: flex; /* Changed to flexbox */
+  display: flex; /* Change to flexbox */
   flex-direction: column; /* Stack items vertically */
   align-items: center; /* Center items horizontally */
   background-repeat: no-repeat;
